buttons css added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,30 @@
                 <a href="#">register</a>
             </header>
             <div class="hero-copy">
+                <div>
+                    <h4><hr>20 citie and groving</h4>
+                    <div>
+                    <h1>Being founder Tkes guts</h1>
+                    <p>Knowing your risk tolerance can
+                         serve as an internaö compass, 
+                         <br>guiding your busuness growth decisions</p>
+                    </div>
+
+                
+                <div class="btn-group d-flex">
+                    <a href="" class="btn btn-primary">Book demo</a>
+                    <a href="" class="btn d-flex btn-play"><img src="/assets/icons/107094.png" alt="" id="play-btn"> Watch showreel</a>
+
+                </div>
 
             </div>
+
+            <div>
+                <div class="image icon image-mask">
+
+                </div>
+            </div>
+            
             <div class="hero-footer">
 
             </div>
