added backgound gradient

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <a href="">news and events</a>
 
                 </nav>
-                <a href="#">register</a>
+                <a href="#" class="btn-outline">Register</a>
             </header>
-            <div class="hero-copy">
+            <div class="hero-copy y-c m2">
                 <div>
                     <h4><hr>20 citie and groving</h4>
                     <div>
